# FactoryOS

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  alembic.ini  pyproject.toml
.cursor/: README.md  hooks.json
.cursor/ai_chat_history/: 2026-06-24-FactoryOSCreateChatHistory.md  README.md
.cursor/docs-baseline/: BASELINE.md
.cursor/factoryos/: AC-P0-INDEX.md  ACTIVATION.md  DEV-GATES.md  GATES.md  HARNESS-SCRIPTS.md  INDEX.md  INTEGRATION-CHAIN.md  MODULE-MAP.md  ORM-MIGRATION-PRINCIPLE.md  PATH-SNAPSHOT.md  PRE-DEV-CHAIN.md  README.md  REDLINES.md  SH-步步流.md  STEP0.md  TEST-GATES.md  UI-FIRST-CONFIG-PRINCIPLE.md  VERIFY-GATES.md
.cursor/hooks/: post-edit-harness-hint.py  protect-paths.py
.cursor/rules/: SH-步步流.mdc  factoryos-dev-workflow.mdc  工厂操作系统.md  注册表注释门禁.mdc  (+3 more)
.github/: pull_request_template.md
_factoryos_pipeline/: README.md  workflow_state.md
alembic/: README.md
contracts/: README.md  repo-structure.yaml
rules/: README.md  coder-expert-workflow.mdc  testing-expert-init.mdc  testing-expert-workflow.mdc
scripts/: README.md  activate_dev_env.sh  audit_path_consistency.py  check_cmv_sync.py  check_code_redundancy.py  check_deptry.py  check_harness.py  check_import_boundaries.py  check_integration_registry.py  check_kernel_registry.py  check_legacy_paths.py  check_openapi_schema_refs.py  check_pipeline.py  check_plan_spec.py  check_pr_diff.py  check_pr_traceability.py  check_registry_annotations.py  check_repo_structure.py  check_router_registry.py  check_static_quality.py  check_structure_change.py  check_test_regression.py  check_uv_lock.sh  check_verify.py  diagram_export.py  docs_baseline  docs_baseline.py  factoryos  factoryos_cli.py  gate  gate_cli.py  gen_path_snapshot.py  generate_all_diagrams.py  generate_architecture_diagrams.py  generate_base_capability_diagram.py  generate_internal_deck.py  harness  pipeline_artifacts.py  plan_gate_lib.py  pytest_contract_workflow.sh  (+4 more)
src/: README.md
(+899 files in other folders)
