[project]
name = "factoryos"
version = "0.1.0"
description = "FactoryOS manufacturing AI execution platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.115,<1",
    "pydantic>=2.10,<3",
    "pyyaml>=6.0,<7",
    "sqlalchemy[asyncio]>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pre-commit>=4.0",
    "deptry>=0.23",
]

[tool.deptry]
extend_exclude = ["scripts", "docs", "_factoryos_pipeline", ".cursor"]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP001 = ["plan_gate_lib", "step_chain_lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.34,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/server/os_core"]

[tool.hatch.build.targets.sdist]
only-include = ["src/server/os_core", "pyproject.toml", "README.md"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src", "src/server"]
asyncio_mode = "auto"
markers = [
    "ac: AC-BASE-001 acceptance case (by id)",
    "pending: W1+ implementation not started — expected fail until green",
    "contract: OpenAPI / Schema contract tests",
    "workflow: SH-步步流 / harness meta tests",
    "integration: DB / API integration tests (W1 S-* / C-*)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src/server", "src/tests", "src/apps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src/server/os_core", "src/server/api", "src/tests"]
extraPaths = ["scripts", "src", "src/server"]
typeCheckingMode = "basic"
